test/corpus/commandlists.txt
=====
CommandList With Locals
=====

[CommandListRenderText]
; Backup used IniParams
local $bak_x = x
local $bak_y = y
; Pass window size in a fail-safe way
run = CommandListPassWindowInfo
; Calculate positions of all chars
run = CustomShaderFormatText
; Renter formatted text
run = CustomShaderRenderText
; Restore IniParams:
x = $bak_x
y = $bak_y

---

(document
  (commandlist_section
    (commandlist_section_header
      (header_prefix)
      (header_identifier))
    (comment)
    (commandlist_section_body
      (local_initialisation
        (named_variable
          (variable_identifier))
        (ini_parameter))
      (local_initialisation
        (named_variable
          (variable_identifier))
        (ini_parameter))
      (comment)
      (run_instruction
        (instruction)
        (callable_commandlist
          (callable_prefix)
          (section_identifier)))
      (comment)
      (run_instruction
        (instruction)
        (callable_customshader
          (callable_prefix)
          (section_identifier)))
      (comment)
      (run_instruction
        (instruction)
        (callable_customshader
          (callable_prefix)
          (section_identifier)))
      (comment)
      (assignment_statement
        (ini_parameter)
        (named_variable
          (variable_identifier)))
      (assignment_statement
        (ini_parameter)
        (named_variable
          (variable_identifier))))))

=====
CommandList With Override Parameters
=====

[CommandListPassWindowInfo]
; Pass a game window size to the shader
if window_width >= 640
	x0 = window_width
	y0 = window_height
	; Fall back to backup methods if user gets zeroes due to 3dmigoto bug
else if rt_width >= 640
	x0 = rt_width
	y0 = rt_height
else if res_width >= 640
	x0 = res_width
	y0 = res_height
else
	x0 = $window_width
	y0 = $window_height
endif

---

(document
  (commandlist_section
    (commandlist_section_header
      (header_prefix)
      (header_identifier))
    (comment)
    (commandlist_section_body
      (conditional_statement
        (if_statement
          (binary_expression
            (runtime_parameter)
            (numeric_constant))
          (block
            (assignment_statement
              (ini_parameter)
              (runtime_parameter))
            (assignment_statement
              (ini_parameter)
              (runtime_parameter))))
        (comment)
        (elseif_statement
          (binary_expression
            (runtime_parameter)
            (numeric_constant))
          (block
            (assignment_statement
              (ini_parameter)
              (runtime_parameter))
            (assignment_statement
              (ini_parameter)
              (runtime_parameter))))
        (elseif_statement
          (binary_expression
            (runtime_parameter)
            (numeric_constant))
          (block
            (assignment_statement
              (ini_parameter)
              (runtime_parameter))
            (assignment_statement
              (ini_parameter)
              (runtime_parameter))))
        (else_statement
          (block
            (assignment_statement
              (ini_parameter)
              (named_variable
                (variable_identifier)))
            (assignment_statement
              (ini_parameter)
              (named_variable
                (variable_identifier)))))))))

=====
CommandList With Modifier
=====

[CommandList->Skin]
if $costume_mods
	checktextureoverride = ps-t0
	checktextureoverride = vb0
	checktextureoverride = vb1
	checktextureoverride = vb2
	checktextureoverride = vb3
	checktextureoverride = ib
	post run = CommandList\SlotFix\CleanUp
	x140 = 0
endif

---

(document
  (commandlist_section
    (commandlist_section_header
      (header_prefix)
      (header_identifier))
    (commandlist_section_body
      (conditional_statement
        (if_statement
          (named_variable
            (variable_identifier))
          (block
            (check_texture_override_instruction
              (instruction)
              (shader_variable))
            (check_texture_override_instruction
              (instruction)
              (buffer_variable))
            (check_texture_override_instruction
              (instruction)
              (buffer_variable))
            (check_texture_override_instruction
              (instruction)
              (buffer_variable))
            (check_texture_override_instruction
              (instruction)
              (buffer_variable))
            (check_texture_override_instruction
              (instruction)
              (buffer_variable))
            (run_instruction
              (execution_modifier)
              (instruction)
              (callable_commandlist
                (callable_prefix)
                (namespace)
                (section_identifier)))
            (assignment_statement
              (ini_parameter)
              (numeric_constant))))))))

=====
CommandList With Resource Comparison
=====

[CommandListGatherSKData]
if $costume_mods
  checktextureoverride = cs-t0
  if (ResourceSKIdentity !== null && ResourceSKMultipliers !== null)
    handling = skip
    cs-t100 = ref ResourceSKIdentity
    cs-u7 = ref ResourceSKMultipliers
    run = CustomShader->SKDataGather
    ResourceSKIdentity = null
    ResourceSKMultipliers = null
  endif
endif

---

(document
  (commandlist_section
    (commandlist_section_header
      (header_prefix)
      (header_identifier))
    (commandlist_section_body
      (conditional_statement
        (if_statement
          (named_variable
            (variable_identifier))
          (block
            (check_texture_override_instruction
              (instruction)
              (shader_variable))
            (conditional_statement
              (if_statement
                (parenthesized_expression
                  (binary_expression
                    (binary_expression
                      (custom_resource
                        (resource_prefix)
                        (section_identifier))
                      (resource_identifier
                        (null)))
                    (binary_expression
                      (custom_resource
                        (resource_prefix)
                        (section_identifier))
                      (resource_identifier
                        (null)))))
                (block
                  (handling_instruction
                    (instruction)
                    (handling_key_value))
                  (assignment_statement
                    (shader_variable)
                    (resource_usage_expression
                      (resource_modifier)
                      (custom_resource
                        (resource_prefix)
                        (section_identifier))))
                  (assignment_statement
                    (shader_variable)
                    (resource_usage_expression
                      (resource_modifier)
                      (custom_resource
                        (resource_prefix)
                        (section_identifier))))
                  (run_instruction
                    (instruction)
                    (callable_customshader
                      (callable_prefix)
                      (section_identifier)))
                  (assignment_statement
                    (custom_resource
                      (resource_prefix)
                      (section_identifier))
                    (resource_usage_expression
                      (resource_identifier
                        (null))))
                  (assignment_statement
                    (custom_resource
                      (resource_prefix)
                      (section_identifier))
                    (resource_usage_expression
                      (resource_identifier
                        (null)))))))))))))

=====
Present Section
=====

[Present]
pre $\global\NS\variable = $\lupomikti\othernamespace\variable + $var
pre run = CommandList\global\NS\Fix
run = CommandListName
if $somevar == 3
    pre $active = 0
    pre run = CommandListSomeFunction
endif

---

(document
  (commandlist_section
    (commandlist_section_header
      (header_identifier))
    (commandlist_section_body
      (assignment_statement
        (execution_modifier)
        (named_variable
          (namespace)
          (variable_identifier))
        (binary_expression
          (named_variable
            (namespace)
            (variable_identifier))
          (named_variable
            (variable_identifier))))
      (run_instruction
        (execution_modifier)
        (instruction)
        (callable_commandlist
          (callable_prefix)
          (namespace)
          (section_identifier)))
      (run_instruction
        (instruction)
        (callable_commandlist
          (callable_prefix)
          (section_identifier)))
      (conditional_statement
        (if_statement
          (binary_expression
            (named_variable
              (variable_identifier))
            (numeric_constant))
          (block
            (assignment_statement
              (execution_modifier)
              (named_variable
                (variable_identifier))
              (numeric_constant))
            (run_instruction
              (execution_modifier)
              (instruction)
              (callable_commandlist
                (callable_prefix)
                (section_identifier)))))))))
